
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Fixed a possible buffer underrun when reading the MOTD file. Thanks
    to Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Code cleanups from Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Fixed detection of IRC lines which are too long to send. Detected by
    Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Fixed return values of our own implementation of strlcpy(). The code has
    been taken from rsync and they fixed it, but we didn't until today :-/
    It has only been used when the system didn't implement strlcpy by itself,
    not on "modern" systems. Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Raised the maximum length of passwords to 20 characters.
  - Fixed a memory leak when resizing the connection pool and realloc()
    failed. Now we don't fall back to malloc(), which should be sane anyway.
    Patch from Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Added support for the Howl (http://www.porchdogsoft.com/products/howl/)
    Rendezvous API, in addition to the API of Apple (Mac OS X). The available
    APU will be autodetected when you call "./configure --with-rendezvous".
  - Made ngIRCd compile on HP/UX 10.20 with native HP pre-ANSI C compiler and
    most probably other older C compilers on other systems.
  - When the daemon should switch to another user ID (ServerID is defined in
    the configuration file) and is not running in a chroot environment, it
    changes it's working directory to the home directory of this user. This
    should enable the system to write proper core files when not running with
    root privileges ...
